# ib031-project

./: .gitignore  README.md  pyproject.toml  report.html  requirements.txt
Presentation/: IB031_presentace.odp
data/: student_performance.csv  student_performance.xlsx  unprocessed.xlsx  ~$student_performance.xlsx
notebooks/: baugi.ipynb  eda.ipynb  notes_baugi.md  preprocessing.ipynb  project_final.ipynb  ridge.ipynb  svm.ipynb
notebooks/explanations/: lime_explanation_0.html  lime_explanation_1.html  lime_explanation_2.html  lime_explanation_3.html  lime_explanation_4.html
